--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
       <h3 class="text-lg font-semibold mb-3">Indices (coût : 5min)</h3>
 
 <!-- Bloc pour afficher l'indice actuel plus en avant -->
-<div id="currentHint" 
-     class="mb-4 p-3 bg-yellow-100 border-l-4 border-amber-500 rounded font-semibold text-gray-800 min-h-[3rem] flex items-center">
-</div>
+<div id="currentHint" class="mb-4 p-3 bg-yellow-100 border-l-4 border-amber-500 rounded font-semibold text-gray-800 hidden"></div>
 
 <ol id="hintsList" class="list-decimal pl-5 space-y-2 text-sm text-gray-800"></ol>
 
@@ -216,16 +214,17 @@ function resetGame(){
   updateTimerDisplay(); 
 
   // Réinitialiser l’affichage de l’indice courant
-  const currentHint = document.getElementById('currentHint');
-  currentHint.textContent = "";
-  currentHint.classList.add('hidden');
+ const currentHint = document.getElementById('currentHint');
+currentHint.textContent = "";
+currentHint.classList.add('hidden');
 
-  // Réactiver les boutons d'indices
-  stepBtns.forEach(btn => {
-    btn.disabled = false;
-    btn.classList.remove('bg-gray-400', 'cursor-not-allowed');
-    btn.classList.add('bg-amber-400');
-  });
+// Réactiver les boutons d'indices
+stepBtns.forEach(btn => {
+  btn.disabled = false;
+  btn.classList.remove('bg-gray-400', 'cursor-not-allowed');
+  btn.classList.add('bg-amber-400');
+});
+
 }
 
 
@@ -265,7 +264,8 @@ function resetGame(){
         hintsUsed += 1;
 
         const currentHint = document.getElementById('currentHint');
-        currentHint.textContent = hintsStore[step];
+currentHint.textContent = hintsStore[step];
+currentHint.classList.remove('hidden');
 
         btn.disabled = true;
         btn.classList.add('bg-gray-400', 'cursor-not-allowed');
@@ -350,6 +350,7 @@ finishYes.addEventListener('click', ()=>{
 
 </body>
 </html>
+
 
 
 
