--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           <div class="flex flex-col gap-2 relative">
             <button id="hintBtn" class="px-3 py-2 rounded-lg bg-rose-500 text-white">Indices (5 max)</button>
             <div id="hintSteps" class="absolute top-full left-0 mt-2 flex flex-col gap-2 hidden bg-white p-2 rounded shadow-lg z-10 w-max">
-              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="0">Step 1</button>
-              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="1">Step 2</button>
-              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="2">Step 3</button>
-              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="3">Step 4</button>
-              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="4">Step 5</button>
+              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="0">La cachette</button>
+              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="1">Invisibilité</button>
+              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="2">Cadenas</button>
+              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="3">Photos</button>
+              <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="4">Train</button>
             </div>
           </div>
           
@@ -381,6 +381,7 @@ updateTimerDisplay();
 
 </body>
 </html>
+
 
 
 
