--- a/Qrcode.html
+++ b/Qrcode.html
@@ -9,50 +9,56 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; }
+    body { font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background: radial-gradient(circle at 10% 10%, #fef3c7, transparent 15%), linear-gradient(180deg,#0ea5a4 0%, #38bdf8 100%); min-height:100vh; display:flex; justify-content:center; align-items:center; padding:2rem; }
+    .parchment { background: linear-gradient(180deg,#fff7e6,#fff1d6); box-shadow: 0 8px 30px rgba(0,0,0,0.25); border: 6px solid #6b3f1e; border-radius: 16px; padding:2rem; max-width:500px; width:100%; text-align:center; }
     .title-font { font-family: 'Pirata One', cursive; }
-    .onepiece-bg { background: radial-gradient(circle at 10% 10%, #fef3c7, transparent 15%), linear-gradient(180deg,#0ea5a4 0%, #38bdf8 100%); min-height: 100vh; display: flex; justify-content: center; align-items: center; padding: 2rem; }
-    .parchment { background: linear-gradient(180deg,#fff7e6,#fff1d6); box-shadow: 0 8px 30px rgba(0,0,0,0.25); border: 6px solid #6b3f1e; border-radius: 16px; padding: 2rem; max-width: 500px; width: 100%; text-align: center; }
-    .btn { padding: 0.5rem 1rem; border-radius: 0.5rem; font-weight: 600; margin: 0.5rem; cursor: pointer; }
-    .btn-amber { background-color: #f59e0b; color: white; }
-    .btn-lime { background-color: #84cc16; color: white; }
-    .btn-gray { background-color: #d1d5db; color: black; }
-    #indiceBox { display: none; margin-top: 1rem; padding: 1rem; border-left: 4px solid #f59e0b; background: #fff7c2; font-weight: 600; border-radius: 8px; }
+    .btn { padding:0.5rem 1rem; border-radius:0.5rem; font-weight:600; cursor:pointer; }
+    .btn-amber { background-color:#f59e0b; color:white; margin:0.5rem; }
+    .btn-lime { background-color:#84cc16; color:white; margin-top:1rem; display:block; width:50%; margin-left:auto; margin-right:auto; }
+    .hidden { display:none; }
+    .flex-center { display:flex; justify-content:center; align-items:center; gap:0.5rem; margin-top:1rem; }
+    .indice { background:#fff7e6; border:4px solid #6b3f1e; border-radius:12px; padding:1rem; margin-top:1rem; font-weight:600; display:flex; align-items:center; gap:0.5rem; justify-content:center; }
+    .chopper { width:50px; height:50px; object-fit:cover; border-radius:50%; }
   </style>
 </head>
-<body class="onepiece-bg">
+<body>
   <div class="parchment">
-    <h1 class="title-font text-2xl mb-4">Ohé Moussaillon !</h1>
-    <p class="mb-4">Tu as trouvé un indice ! Mais avant de le voir, choisis ta réponse :</p>
-    <div>
-      <button id="btnOui" class="btn btn-amber">OUI OUI OUI</button>
-      <button id="btnEvidemment" class="btn btn-lime">ÉVIDEMMENT</button>
+    <h1 class="title-font text-2xl mb-4">Tu as trouvé un indice !</h1>
+    <p id="message" class="mb-4">Mais avant de le voir, es-tu sur de vouloir ?</p>
+
+    <div id="choiceBtns" class="flex-center">
+      <button id="btnOui" class="btn btn-amber">Oui Oui Oui</button>
+      <button id="btnEvidemment" class="btn btn-amber">Évidemment</button>
     </div>
 
-    <div id="indiceBox">Voila l’indice !</div>
-
-    <button id="saveBtn" class="btn btn-gray mt-4" style="display:none;">Sauvegarder l’indice</button>
+    <div id="indiceContainer" class="hidden">
+      <div class="indice">
+        <img src="One piece/Chopper.jpeg" alt="Chopper" class="chopper">
+        <span id="indiceText">Voila l'indice !</span>
+      </div>
+      <button id="saveBtn" class="btn btn-lime">Sauvegarder l'indice</button>
+    </div>
   </div>
 
-<script>
-  const btnOui = document.getElementById('btnOui');
-  const btnEvidemment = document.getElementById('btnEvidemment');
-  const indiceBox = document.getElementById('indiceBox');
-  const saveBtn = document.getElementById('saveBtn');
+  <script>
+    const btnOui = document.getElementById('btnOui');
+    const btnEvidemment = document.getElementById('btnEvidemment');
+    const choiceBtns = document.getElementById('choiceBtns');
+    const indiceContainer = document.getElementById('indiceContainer');
+    const saveBtn = document.getElementById('saveBtn');
 
-  function showIndice(){
-    indiceBox.style.display = 'block';
-    saveBtn.style.display = 'inline-block';
-  }
+    function showIndice(){
+      choiceBtns.classList.add('hidden'); // cache les deux boutons
+      indiceContainer.classList.remove('hidden'); // affiche le message + indice + bouton sauvegarder
+    }
 
-  btnOui.addEventListener('click', showIndice);
-  btnEvidemment.addEventListener('click', showIndice);
+    btnOui.addEventListener('click', showIndice);
+    btnEvidemment.addEventListener('click', showIndice);
 
-  saveBtn.addEventListener('click', ()=>{
-    // Ici on pourrait ajouter une logique de communication avec le jeu principal si besoin
-    alert("Indice sauvegardé !");
-    window.close(); // ferme cette page
-  });
-</script>
+    saveBtn.addEventListener('click', ()=>{
+      alert("Indice sauvegardé !"); // ici tu pourras ajouter la logique pour renvoyer l'indice vers le site principal
+      window.close(); // ferme la page actuelle
+    });
+  </script>
 </body>
 </html>
