--- a/Qrcode.html
+++ b/Qrcode.html
@@ -33,7 +33,7 @@
 
     <div id="indiceContainer" class="hidden">
       <div class="indice">
-        <img src="One piece/Chopper.jpeg" alt="Chopper" class="chopper">
+        <img src="One piece/Chopper.png" alt="Chopper" class="chopper">
         <span id="indiceText">Voila l'indice !</span>
       </div>
       <button id="saveBtn" class="btn btn-lime">Sauvegarder l'indice</button>
