--- a/Qrcode.html
+++ b/Qrcode.html
@@ -34,7 +34,7 @@
     <div id="indiceContainer" class="hidden">
       <div class="indice">
         <img src="One piece/Chopper.png" alt="Chopper" class="chopper">
-        <span id="indiceText">Voila l'indice !</span>
+        <span id="indiceText">Le banquet commence toujours autour du feu, et c’est souvent là que se révèle les secrets de l'équipage</span>
       </div>
       <button id="saveBtn" class="btn btn-lime">Sauvegarder l'indice</button>
     </div>
