--- a/Qrcode.html
+++ b/Qrcode.html
@@ -1,64 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Indice One Piece</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background: radial-gradient(circle at 10% 10%, #fef3c7, transparent 15%), linear-gradient(180deg,#0ea5a4 0%, #38bdf8 100%); min-height:100vh; display:flex; justify-content:center; align-items:center; padding:2rem; }
-    .parchment { background: linear-gradient(180deg,#fff7e6,#fff1d6); box-shadow: 0 8px 30px rgba(0,0,0,0.25); border: 6px solid #6b3f1e; border-radius: 16px; padding:2rem; max-width:500px; width:100%; text-align:center; }
-    .title-font { font-family: 'Pirata One', cursive; }
-    .btn { padding:0.5rem 1rem; border-radius:0.5rem; font-weight:600; cursor:pointer; }
-    .btn-amber { background-color:#f59e0b; color:white; margin:0.5rem; }
-    .btn-lime { background-color:#84cc16; color:white; margin-top:1rem; display:block; width:50%; margin-left:auto; margin-right:auto; }
-    .hidden { display:none; }
-    .flex-center { display:flex; justify-content:center; align-items:center; gap:0.5rem; margin-top:1rem; }
-    .indice { background:#fff7e6; border:4px solid #6b3f1e; border-radius:12px; padding:1rem; margin-top:1rem; font-weight:600; display:flex; align-items:center; gap:0.5rem; justify-content:center; }
-    .chopper { width:50px; height:50px; object-fit:cover; border-radius:50%; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Indice QR One Piece</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
+<style>
+  body { font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background: radial-gradient(circle at 10% 10%, #fef3c7, transparent 15%), linear-gradient(180deg,#0ea5a4 0%, #38bdf8 100%); min-height: 100vh; display: flex; justify-content: center; align-items: center; padding: 1rem;}
+  .parchment { background: linear-gradient(180deg,#fff7e6,#fff1d6); box-shadow: 0 8px 30px rgba(0,0,0,0.25); border: 6px solid #6b3f1e; border-radius: 16px; padding: 2rem; max-width: 400px; text-align: center;}
+  .title-font { font-family: 'Pirata One', cursive; font-size: 2rem; }
+  .sub-title { font-family: 'Pirata One', cursive; font-size: 2.5rem; margin-bottom: 1rem; }
+  .chopper { width: 100px; height: 100px; margin: 1rem auto; border-radius: 50%; object-fit: cover; }
+  button { margin-top: 1rem; padding: 0.5rem 1rem; border-radius: 8px; font-weight: 600; }
+</style>
 </head>
 <body>
-  <div class="parchment">
-    <h1 class="title-font text-2xl mb-4">Tu as trouvé un indice !</h1>
-    <p id="message" class="mb-4">Mais avant de le voir, es-tu sur de vouloir ?</p>
 
-    <div id="choiceBtns" class="flex-center">
-      <button id="btnOui" class="btn btn-amber">Oui Oui Oui</button>
-      <button id="btnEvidemment" class="btn btn-amber">Évidemment</button>
-    </div>
-
-    <div id="indiceContainer" class="hidden">
-      <div class="indice">
-        <img src="One piece/Chopper.png" alt="Chopper" class="chopper">
-        <span id="indiceText">Le banquet commence toujours autour du feu, et c’est souvent là que se révèle les secrets de l'équipage</span>
-      </div>
-      <button id="saveBtn" class="btn btn-lime">Sauvegarder l'indice</button>
-    </div>
+<div class="parchment" id="mainContainer">
+  <div id="ohéTitle" class="sub-title">Ohé Moussaillon !</div>
+  <div id="foundMessage" class="title-font mb-4">Tu as trouvé un indice</div>
+  <div id="beforeMsg" class="mb-4">Mais avant de le voir, es-tu sur de vouloir ?</div>
+  <div id="choiceButtons" class="flex justify-center gap-4 mb-4">
+    <button class="bg-amber-500 text-white" id="btnOui">Oui Oui Oui</button>
+    <button class="bg-lime-500 text-white" id="btnEvidemment">Évidemment</button>
   </div>
+  <div id="indiceContainer" class="hidden">
+    <img src="One piece/Chopper.png" alt="Chopper" class="chopper">
+    <div id="indiceText" class="mb-4 font-semibold">Voici l'indice</div>
+    <button id="saveBtn" class="bg-rose-500 text-white">Sauvegarder l'indice</button>
+  </div>
+</div>
 
-  <script>
-    const btnOui = document.getElementById('btnOui');
-    const btnEvidemment = document.getElementById('btnEvidemment');
-    const choiceBtns = document.getElementById('choiceBtns');
-    const indiceContainer = document.getElementById('indiceContainer');
-    const saveBtn = document.getElementById('saveBtn');
+<script>
+const btnOui = document.getElementById('btnOui');
+const btnEvidemment = document.getElementById('btnEvidemment');
+const beforeMsg = document.getElementById('beforeMsg');
+const choiceButtons = document.getElementById('choiceButtons');
+const indiceContainer = document.getElementById('indiceContainer');
+const saveBtn = document.getElementById('saveBtn');
 
-    function showIndice(){
-      choiceBtns.classList.add('hidden'); // cache les deux boutons
-      indiceContainer.classList.remove('hidden'); // affiche le message + indice + bouton sauvegarder
-    }
+// Quand l'utilisateur clique sur un des deux boutons de choix
+function showIndice() {
+  beforeMsg.style.display = 'none';
+  choiceButtons.style.display = 'none';
+  indiceContainer.classList.remove('hidden');
+}
 
-    btnOui.addEventListener('click', showIndice);
-    btnEvidemment.addEventListener('click', showIndice);
+btnOui.addEventListener('click', showIndice);
+btnEvidemment.addEventListener('click', showIndice);
 
-    saveBtn.addEventListener('click', ()=>{
-      alert("Indice sauvegardé !"); // ici tu pourras ajouter la logique pour renvoyer l'indice vers le site principal
-      window.close(); // ferme la page actuelle
-    });
-  </script>
+// Sauvegarder l'indice et fermer la page (on pourra remplacer par redirection après)
+saveBtn.addEventListener('click', () => {
+  // Ici on peut faire un fetch ou redirection vers le site principal
+  alert("Indice sauvegardé !");
+  window.close(); // ferme ce site
+});
+</script>
+
 </body>
 </html>
