--- a/Qrcode.html
+++ b/Qrcode.html
@@ -55,7 +55,7 @@ btnEvidemment.addEventListener('click', showIndice);
 // Sauvegarder l'indice et fermer la page (on pourra remplacer par redirection après)
 saveBtn.addEventListener('click', () => {
   // Ici on peut faire un fetch ou redirection vers le site principal
-  alert("Indice sauvegardé !");
+  alert("Indice sauvegardé ! Tu peux le retrouver sur le guide principal.  Tourne la page et retourne-y marin d'eau douce");
   window.close(); // ferme ce site
 });
 </script>
